Timeseries reopen verification function does not properly handle meta in different order

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0, 8.2.2, 8.0.20
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.2, v8.1, v8.0
    • Storage Execution 2025-08-04, Storage Execution 2025-08-18, Storage Execution 2025-09-01, Storage Execution 2025-09-15, Storage Execution 2025-09-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When nested metadata is used with a driver/application that can send elements in random order the verification function will fail, preventing bucket reopening from succeeding. The inserts will retry in a new bucket, but this can lead to very poor bucketing as it essentially disables any form of bucket reopening.

            Assignee:
            Damian Wasilewicz
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: