SERVER-106854 Make timeseries reopen verification function properly handle meta in different order (#40809)

GitOrigin-RevId: b7675bce49155db5b29bb92c1c273bd542441284