src/mongo/db/timeseries/metadata.cpp
@@ -29,7 +29,8 @@
 
 #include "mongo/db/timeseries/metadata.h"
 
-#include "mongo/util/tracking/allocator.h"
+#include "mongo/bson/simple_bsonelement_comparator.h"
+#include "mongo/bson/unordered_fields_bsonelement_comparator.h"
 
 #include <boost/container/small_vector.hpp>
 
@@ -107,6 +108,78 @@ void normalizeObject(const BSONObj& obj, allocator_aware::BSONObjBuilder<Allocat
     }
 }
 
+bool areBSONObjectsEqualUnordered(const BSONObj& lhs, const BSONObj& rhs);
+bool areBSONArraysEqualUnordered(const BSONObj& lhs, const BSONObj& rhs);
+
+bool areBSONArraysEqualUnordered(const BSONObj& lhs, const BSONObj& rhs) {
+    BSONObjIterator it1(lhs);
+    BSONObjIterator it2(rhs);
+
+    while (it1.more() && it2.more()) {
+        auto l = it1.next();
+        auto r = it2.next();
+        if (l.type() != r.type()) {
+            return false;
+        }
+
+        if (l.type() == BSONType::object) {
+            if (!areBSONObjectsEqualUnordered(l.Obj(), r.Obj())) {
+                return false;
+            }
+        } else if (l.type() == BSONType::array) {
+            if (!areBSONArraysEqualUnordered(l.Obj(), r.Obj())) {
+                return false;
+            }
+        } else {
+            // In order to match the behavior of timeseries::metadata::normalize, we ignore field
+            // names when comparing array elements.
+            UnorderedFieldsBSONElementComparator comparator;
+            if (comparator.compare(l, r) != 0) {
+                return false;
+            }
+        }
+    }
+
+    if (it1.more() || it2.more()) {
+        return false;
+    }
+
+    return true;
+}
+
+bool areBSONObjectsEqualUnordered(const BSONObj& lhs, const BSONObj& rhs) {
+    BSONObjIteratorSorted it1(lhs);
+    BSONObjIteratorSorted it2(rhs);
+
+    while (it1.more() && it2.more()) {
+        auto l = it1.next();
+        auto r = it2.next();
+        if (l.type() != r.type()) {
+            return false;
+        }
+
+        if (l.type() == BSONType::object) {
+            if (!areBSONObjectsEqualUnordered(l.Obj(), r.Obj())) {
+                return false;
+            }
+        } else if (l.type() == BSONType::array) {
+            if (!areBSONArraysEqualUnordered(l.Obj(), r.Obj())) {
+                return false;
+            }
+        } else {
+            SimpleBSONElementComparator comparator;
+            if (comparator.compare(l, r) != 0) {
+                return false;
+            }
+        }
+    }
+
+    if (it1.more() || it2.more()) {
+        return false;
+    }
+
+    return true;
+}
 }  // namespace
 
 template <class Allocator>
@@ -137,4 +210,16 @@ template void normalize(const BSONElement& elem,
                         allocator_aware::BSONObjBuilder<tracking::Allocator<void>>& builder,
                         boost::optional<StringData> as);
 
+bool areMetadataEqual(const BSONElement& elem1, const BSONElement& elem2) {
+    if (elem1.type() != elem2.type()) {
+        return false;
+    }
+    if (elem1.type() == BSONType::object) {
+        return areBSONObjectsEqualUnordered(elem1.Obj(), elem2.Obj());
+    } else if (elem1.type() == BSONType::array) {
+        return areBSONArraysEqualUnordered(elem1.Obj(), elem2.Obj());
+    } else {
+        return elem1.binaryEqualValues(elem2);
+    }
+}
 }  // namespace mongo::timeseries::metadata
